--- a/upload-bill.css
+++ b/upload-bill.css
@@ -25,7 +25,8 @@
     text-transform: uppercase;
 }
 
-main {
+main
+{
     background-image: url(images/upload-bill.webp);
     background-repeat: no-repeat;
     background-size: cover;
@@ -34,12 +35,14 @@ main {
 }
 
 /* Services section */
-#create-dealer {
+#create-dealer
+{
     color: var(--white);
     padding: 3em;
 }
 
-#create-dealer h2 {
+#create-dealer h2
+{
     font-size: 2rem;
     margin-bottom: 1em;
     text-align: center;
@@ -47,7 +50,8 @@ main {
     text-shadow: 0 0 20px black;
 }
 
-.heading-container {
+.heading-container
+{
     display: grid;
     grid-template-columns: 2.5rem 1fr 2.5rem;
     justify-content: center;
@@ -56,7 +60,8 @@ main {
     margin-block-end: 1rem;
 }
 
-.session-message {
+.session-message
+{
     text-align: center;
     color: var(--white);
     font-weight: bold;
@@ -68,7 +73,8 @@ main {
     border-radius: 4px;
 }
 
-.back-btn {
+.back-btn
+{
     padding: 0.5rem;
     width: 2.5rem;
     border-radius: 999px;
@@ -78,7 +84,8 @@ main {
     aspect-ratio: 1;
 }
 
-.heading {
+.heading
+{
     font-size: 2.5rem;
     font-weight: bold;
     text-align: left;
@@ -87,7 +94,8 @@ main {
     justify-self: center;
 }
 
-.form_container {
+.form_container
+{
     position: relative;
     width: 70vw;
     margin-inline: auto;
@@ -101,20 +109,24 @@ main {
     transition: background-color 500ms ease-in-out;
 }
 
-.form_container:is(:hover, :focus, :focus-within, :focus-visible) {
+.form_container:is(:hover, :focus, :focus-within, :focus-visible)
+{
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.long-input {
+.long-input
+{
     grid-column: 1/3;
 }
 
-.input_box {
+.input_box
+{
     display: grid;
     gap: 0.5em;
 }
 
-.input_box label {
+.input_box label
+{
     color: var(--white);
     font-size: 1.25rem;
     font-weight: bold;
@@ -123,7 +135,8 @@ main {
 
 input,
 textarea,
-select {
+select
+{
     font: inherit;
     padding: 0.5em;
     border: none;
@@ -132,11 +145,13 @@ select {
     color: var(--black);
 }
 
-.input_box input:is(:focus, :valid) {
+.input_box input:is(:focus, :valid)
+{
     outline: 2px solid var(--accent-color);
 }
 
-.submit-button {
+.submit-button
+{
     grid-column: 1/3;
     padding: 0.75em 2em;
     color: white;
@@ -145,41 +160,44 @@ select {
     border-radius: 4px;
     margin-inline: auto;
     margin-block-start: 1rem;
-    background-image: linear-gradient(
-        to right,
-        var(--accent-color),
-        var(--accent-color-hover),
-        var(--accent-color) 80%
-    );
+    background-image: linear-gradient(to right,
+            var(--accent-color),
+            var(--accent-color-hover),
+            var(--accent-color) 80%);
     background-size: 200%;
     cursor: pointer;
     transition: background-position 250ms ease-in-out;
     background-position: 0% 0%;
 }
 
-.submit-button:hover {
+.submit-button:hover
+{
     background-position: 100% 100%;
 }
 
 /* Footer styles */
-footer {
+footer
+{
     background-color: black;
     color: white;
     padding: 20px 0;
     text-align: center;
 }
 
-.footer-links a {
+.footer-links a
+{
     color: white;
     text-decoration: none;
     margin: 0 10px;
 }
 
-.footer-links a:hover {
+.footer-links a:hover
+{
     text-decoration: underline;
 }
 
-.message {
+.message
+{
     margin-top: 20px;
     padding: 10px;
     border-radius: 5px;
@@ -190,12 +208,37 @@ footer {
     text-align: center;
     font-weight: bold;
 }
-.success {
+
+.success
+{
     color: white;
     background-color: green;
 }
-.error {
+
+.error
+{
     color: whitesmoke;
     background-color: red;
     border: 1px solid red;
+}
+
+.hidden
+{
+    display: none;
+}
+
+.more-button
+{
+    display: block;
+    margin-block-start: 1rem;
+    margin-inline: auto;
+    padding: 0.375em 1em;
+    color: white;
+    background-image: linear-gradient(to right,
+            var(--accent-color),
+            var(--accent-color-hover),
+            var(--accent-color) 80%);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
